k8s/keycloak-deploy.yaml

apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - port: 80
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:21.1.1
          command: ["start-dev"]
          ports:
            - containerPort: 8080
